--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <title>Node.js – An introduction</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/prism/1.3.0/themes/prism-tomorrow.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <style>
+    .react-gravatar {
+      border-radius: 100%;
+      margin: 15px 0;
+    }
+  </style>
 </head>
 <body>
   <div id="root"></div>
